      correct in 16x16 size (used on Mac OS X).

    * Delete thumbnails from ".thumbs" subdirectory.
      Marcin 'Shard' Konicki <shard at beosjournal.org>

    * tuxpaint-import.sh now uses single brackets when testing for "--help".
      (Apparently, the "[[...]]" version didn't work some places.)
      Jeff Smith <whydoubt@yahoo.com>

  * Compiling, porting and packaging updates:
    -----------------------------------------
    * Added "Categories" to the 'tuxpaint.desktop' file
      ("Education," "RasterGraphics," "Graphics" and "Art").
      
    * Added 'win32' target to Makefile, for use on Windows with MinGW/MSYS.
      John Popplewell <john@johnnypops.demon.co.uk>
    
    * BeOS code updates.
      Marcin 'Shard' Konicki <shard at beosjournal.org>

    * Updated BeOS Makefile.
      Marcin 'Shard' Konicki <shard at beosjournal.org>

    * Added BeOS resource file (src/tuxpaint.rsrc)
      Marcin 'Shard' Konicki <shard at beosjournal.org>
  
    * Added "PKG_ROOT" variable to Makefile, and "tuxpaint.spec" file,
      for Tux Paint RPM building ease.
      TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

    * Fixed to compile on old GLIBC system (such as RedHat-6.2)
      TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

    * Fixes to RPM spec file
      TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>
  
    * Enabled more compiler warnings, and updated code to prevent them.
      Albert Cahalan <albert@users.sf.net>
      Bill Kendrick <bill@newbreedsoftware.com>

    * Gave up on 'HQ4X' scaler and scanline polygon filling, for the
      time being.  (i.e., removed unused code.)

  * Documentation updates:
    ----------------------
    * Removed TODO.txt file and moved all bugs
      and feature requests to the SourceForge
      tracker: http://sourceforge.net/tracker/?group_id=66938

  * New translations:
    -----------------
    * Albanian translation created.
      Ilir Rugova <ilirrugova@gmx.de>
      Laurent Dhima <laurenti@alblinux.net>
